--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,34 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Text-Delimited
-version:      2.00
-version_from: lib/Text/Delimited.pm
-installdirs:  site
+--- #YAML:1.0
+name:               Text-Delimited
+version:            VERSIONTAG
+abstract:           Parse Delimited Text Files
+author:
+    - Phil Pollard <bennie@cpan.org>
+license:            artistic_2
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+    perl:               5.008001
+    Test::Simple:       0
+resources:
+    bugtracker:
+        web:  https://rt.cpan.org/Dist/Display.html?Name=Text-Delimited
+    repository:
+        type:  git
+        url:   git://github.com/bennie/perl-Text-Delimited.git
+        web:   http://github.com/bennie/perl-Text-Delimited
+no_index:
+    directory:
+        - t
+        - inc
+provides:
+    Rcs::Parser:
+        file: lib/Text/Delimited.pm
+        version: VERSIONTAG
+generated_by:       ExtUtils::MakeMaker version 6.56
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
